Make text color decorators
- The colors used to add styling to Text objects are no longer required parts of the TextComponents. Instead, they are now provided using the ITextDecorator system. This makes it easier to specify styling/etc per platform and is generally a bit cleaner.
- The Text class no longer has a ColorScheme object. It only has an ITextComponentFactory class which may (or may not) take care of colors now.
- The ColorScheme class now has a generic type parameter so each platform can provide whatever type of styling they want for each TextType.